# proyectos_IA_Big_Data

./: README.md  Titanic_EDA_Notebook.ipynb
AWS/Ejemplo_server_polly/: application.py  speechShynthesis.py
AWS/PIA_project_animals/: app.py  requirements.txt
AWS/difuminado_caras/: README.md  application.py  blur_faces.py  detect_faces.py  requirements.txt
AWS/speech_synthesis/: README.md  speech_synthesis.py
Colab Notebooks/Fuzzy Logic/: Ejemplo_logica_difusa_propina.ipynb  Ejercicio_propina_difusa.ipynb
Colab Notebooks/Redes Neuronales/: ANNs 1 Dataset IRIS.ipynb
Colab Notebooks/Sistemas de Aprendizaje Automático/: Análisis de datos de ventas Walmart.ipynb  Análisis_Dataset_Iris.ipynb  Estadistica_Descriptiva_Ejercicio.ipynb  [3.1.2.1.] [Práctica] Dataset vinos, introducción al algoritmo k-NN.ipynb  [3.1.2.2.] [Práctica] P.3. Sistema de decisión para actividades al aire libre.ipynb  (+6 more)
Jupyter Notebooks/T04_scrapy/: pyproject.toml
Jupyter Notebooks/T04_scrapy/datasets/: dataset.csv  dataset.json
Jupyter Notebooks/T04_scrapy/notebooks/: scrapy.ipynb
Jupyter Notebooks/T04_scrapy/scrapy_pokemon/: response.html
Jupyter Notebooks/T04_scrapy/scrapy_pokemon/pokemon/: settings.py
Jupyter Notebooks/T04_scrapy/scrapy_pokemon/pokemon/spiders/: regional_pokedex.py
Jupyter Notebooks/T04_scrapy/scrapy_pokemon/reports/: dataset-report.html
Jupyter Notebooks/titanic_project/: README.md  app.py  app_streamlit.py  pyproject.toml
Jupyter Notebooks/titanic_project/models/: dt_model.pkl
Jupyter Notebooks/titanic_project/notebooks/: Cuaderno.ipynb
(+26 files in other folders)
