[tool.poetry]
name = "t04-scrapy"
version = "0.1.0"
description = ""
authors = ["María del Carmen Córdoba <98326663+McCordoba@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
scrapy = "^2.12.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
numpy = "2.1"
ipywidgets = "^8.1.5"
ydata-profiling = "^4.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
