[project]
name = "titanic-project"
version = "0.1.0"
description = ""
authors = [
    {name = "María del Carmen Córdoba",email = "98326663+McCordoba@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "jsonify (>=0.5,<0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
